--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "tw-elements": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
